# VoxelEngine

./: CMakeLists.txt  CMakePresets.json
VoxelEngine/: CMakeLists.txt  VoxelEngine.cpp
VoxelEngine/include/mesh/: VoxelMesher.h
VoxelEngine/include/platform/: Input.h  Window.h
VoxelEngine/include/render/: Camera.h  CameraController.h  Frustum.h  GLShader.h  Renderer.h  TextureArray.h
VoxelEngine/include/world/: Chunk.h  Noise.h  World.h
VoxelEngine/src/: main.cpp
VoxelEngine/src/mesh/: VoxelMesher.cpp
VoxelEngine/src/platform/: Input.cpp  Window.cpp
VoxelEngine/src/render/: Camera.cpp  CameraController.cpp  Frustum.cpp  GLShader.cpp  Renderer.cpp  TextureArray.cpp
VoxelEngine/src/world/: Noise.cpp  World.cpp
